--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ api/package-lock.json
 
 # local env files
 app/.env
-app/.env
+api/.env
+
+# error log
+api/error.log
 
 # Editor directories and files
 .idea
