--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@storybook/vue": "^6.1.20",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "postcss": "^8.2.4",
     "register-service-worker": "^1.7.1",
     "tailwind": "^4.0.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vue-tailwind": "^2.1.1"
   },
