--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.4.0",
