--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "faker": "^5.4.0",
     "mysql": "^2.18.1",
+    "socket.io": "^4.1.2",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
