--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
     "core-js": "^3.6.5",
     "postcss": "^8.2.4",
     "register-service-worker": "^1.7.1",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "tailwind": "^4.0.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
