fix: update app packages

--- a/app/package.json
+++ b/app/package.json
@@ -10,30 +10,31 @@
     "storybook": "start-storybook -p 9009 -s public"
   },
   "dependencies": {
-    "@storybook/vue": "^6.1.20",
-    "axios": "^0.21.1",
+    "@storybook/vue": "^5.3.21",
+    "axios": "latest",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
-    "postcss": "^8.2.4",
+    "postcss": "latest",
     "register-service-worker": "^1.7.1",
-    "socket.io": "^4.1.2",
-    "socket.io-client": "^4.1.2",
+    "socket.io": "latest",
+    "socket.io-client": "latest",
     "tailwind": "^4.0.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vue-tailwind": "^2.1.1",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "webpack": "latest"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "latest",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-pwa": "latest",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "prettier": "^1.19.1",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass": "latest",
+    "sass-loader": "latest",
     "tailwindcss": "^2.0.2",
     "vue-cli-plugin-vuetify": "~2.4.0",
     "vue-template-compiler": "^2.6.11",
