--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.4.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "socket.io": "^4.1.2",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.6",
